# hiclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.ja-JP.md  README.md  README.zh-CN.md
blog/: hiclaw-1.0.6-release.md  hiclaw-announcement.md
changelog/: current.md  v1.0.6.md  v1.0.9.md
cloud-element/: Dockerfile  entrypoint.sh
cloud-manager/: Dockerfile
copaw/: Dockerfile  README.md  pyproject.toml  setup.py
copaw/scripts/: copaw-worker-entrypoint.sh
copaw/src/copaw_manager/app/channels/matrix/: channel.py
copaw/src/copaw_worker/: __init__.py  __main__.py  agent.py  bridge.py  cli.py  config.py  matrix.py  matrix_channel.py  sync.py  worker.py
copaw/tests/: test_bridge.py
docker-proxy/: security.go  security_test.go
docs/: declarative-resource-management.md  faq.md  import-worker.md  manager-guide.md  windows-deploy.md
hack/: build-cloud.sh  local-k8s-up.sh
hiclaw-controller/: Dockerfile  Dockerfile.embedded
install/: .gitignore  README.md  docker-compose.yml  hiclaw-import.sh  hiclaw-install-embedded.sh  hiclaw-install.ps1  hiclaw-install.sh  hiclaw-manager.env.example  hiclaw-verify.sh
manager/: Dockerfile  Dockerfile.aliyun  Dockerfile.copaw  Makefile  supervisord.conf
openclaw-base/: Dockerfile
orchestrator/: Dockerfile  config.go  go.mod  main.go
scripts/: export-debug-log.py  replay-task.sh
tasks/: myfix-issue-320-windows-host-home-path.md
tests/: run-all-tests.sh  test-01-manager-boot.sh  test-02-create-worker.sh  test-03-assign-task.sh  test-04-human-intervene.sh  test-05-heartbeat.sh  test-06-multi-worker.sh  (+7 more)
(+142 files in other folders)
