[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copaw-worker"
version = "0.1.0"
description = "Lightweight HiClaw Worker runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matrix-nio>=0.24.0",
    "minio>=7.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
copaw-worker = "copaw_worker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
